--- a/Pipfile
+++ b/Pipfile
@@ -3,7 +3,7 @@ url = "https://pypi.python.org/simple"
 verify_ssl = true
 
 [packages]
-django = "*"
+django = "2.0.8"
 gunicorn = "*"
 django-heroku = "*"
 django-progressive-web-app = "*"
